--- a/PCSX-R/Info.plist
+++ b/PCSX-R/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.9.96</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.9.96</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018 C.W. Betts. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
@@ -77,5 +77,9 @@
 	<array>
 		<string>openemu.system.psx</string>
 	</array>
+	<key>SUEnableAutomaticChecks</key>
+	<false/>
+	<key>SUFeedURL</key>
+	<string>https://raw.github.com/OpenEmu/OpenEmu-Update/master/pcsxr_appcast.xml</string>
 </dict>
 </plist>
